# online-food-ordering-system/customer-service/src/routes/customerRoutes.js
@@ -6,7 +6,9 @@ const {
   getAllCustomers,
   getCustomerById,
   updateCustomer,
-  deleteCustomer
+  deleteCustomer,
+  getOrdersByCustomer,
+  getPaymentsByCustomer
 } = require("../controllers/customerController");
 
 router.post("/", createCustomer);
@@ -14,5 +16,7 @@ router.get("/", getAllCustomers);
 router.get("/:id", getCustomerById);
 router.put("/:id", updateCustomer);
 router.delete("/:id", deleteCustomer);
+router.get("/:id/orders", getOrdersByCustomer);
+router.get("/:id/payments", getPaymentsByCustomer);
 
 module.exports = router;
