# online-food-ordering-system/menu-service/src/routes/menuRoutes.js
@@ -6,7 +6,10 @@ const {
     getAllMenuItems,
     getMenuItemById,
     updateMenuItem,
-    deleteMenuItem
+    deleteMenuItem,
+    deleteMenuItemsByRestaurant,
+    getMenuItemsByRestaurant,
+    updateMenuAvailability
 } = require("../controllers/menuController");
 
 router.post("/", createMenuItem);
@@ -14,5 +17,8 @@ router.get("/", getAllMenuItems);
 router.get("/:id", getMenuItemById);
 router.put("/:id", updateMenuItem);
 router.delete("/:id", deleteMenuItem);
+router.delete("/restaurant/:restaurantId", deleteMenuItemsByRestaurant);
+router.get("/restaurant/:restaurantId", getMenuItemsByRestaurant);
+router.put("/:id/availability", updateMenuAvailability);
 
 module.exports = router;
