# online-food-ordering-system/order-service/src/routes/orderRoutes.js
@@ -6,6 +6,7 @@ const {
 	getAllOrders,
 	getOrderById,
 	getOrdersByUser,
+	getOrdersByRestaurant,
 	updateOrderStatus,
 	getOrderPayments,
 	refundOrder,
@@ -15,6 +16,7 @@ const {
 router.post("/", createOrder);
 router.get("/", getAllOrders);
 router.get("/user/:userId", getOrdersByUser);
+router.get("/restaurant/:restaurant_id", getOrdersByRestaurant);
 
 router.get("/:id", getOrderById);
 router.put("/:id/status", updateOrderStatus);
