# online-food-ordering-system/restaurant-service/src/routes/restaurantRoutes.js
@@ -6,7 +6,9 @@ const {
   getAllRestaurants,
   getRestaurantById,
   updateRestaurant,
-  deleteRestaurant
+  deleteRestaurant,
+  getMenusByRestaurant,
+  updateRestaurantStatus
 } = require("../controllers/restaurantController");
 
 router.post("/", createRestaurant);
@@ -14,5 +16,7 @@ router.get("/", getAllRestaurants);
 router.get("/:id", getRestaurantById);
 router.put("/:id", updateRestaurant);
 router.delete("/:id", deleteRestaurant);
+router.get("/:id/menus", getMenusByRestaurant);
+router.put("/:id/status", updateRestaurantStatus);
 
 module.exports = router;
